[project]
name = "intelligencestack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cerebras-cloud-sdk>=1.67.0",
    "gradio>=6.19.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "litellm>=1.89.3",
    "markdown>=3.10.2",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
]
